<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guarded_eval</name>
  <version>0.1.0</version>
  <description>
    Live side-by-side demo of naive vs. guarded selection under optimization
    pressure against a cheap proxy evaluator: two simulated 2-link arms
    attempt the same reach-and-confirm task, one selected purely by proxy
    score (an RSI-style loop), one gated on a cheap ground-truth probe
    before ranking by proxy. Streams over rosbridge to a browser dashboard.
  </description>
  <maintainer email="kchauha3@example.com">kchauha3</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
